--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -8,10 +8,10 @@
         </h2>
         <span flex></span>
         <md-button class="md-icon-button" aria-label="Favorite">
-            <md-icon md-svg-icon="img/icons/favorite.svg" style="color: greenyellow;"></md-icon>
+            <md-icon> favorite </md-icon>
         </md-button>
         <md-button class="md-icon-button" aria-label="More">
-            <md-icon md-svg-icon="img/icons/more_vert.svg"></md-icon>
+            <md-icon> more_vert </md-icon>
         </md-button>
     </div>
 </md-toolbar>
